src/snapshots/gemini2html__tests__convert_tree-3.snap
---
source: src/main.rs
expression: content
---
<!doctype html>
<html>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1" />
<title>hello</title>
<body>
<h1>hello</h1>
<p>I exists !</p>
<p>some infos</p></body>
</html>
