src/snapshots/gemini2html__tests__convert_tree.snap
---
source: src/main.rs
expression: content
---
<!doctype html>
<html>
<meta charset="utf-8">
<meta name="viewport" content="width=device-width, initial-scale=1" />
<style>
html {
	font-family: sans-serif;
	color: #080808;
}

body {
	max-width: 920px;
	margin: 0 auto;
	padding: 1rem 2rem;
}

blockquote {
	background-color: #eee;
	border-left: 3px solid #444;
	margin: 1rem -1rem 1rem calc(-1rem - 3px);
	padding: 1rem;
}

ul {
	margin-left: 0;
	padding: 0;
}

li {
	padding: 0;
}

li:not(:last-child) {
	margin-bottom: 0.5rem;
}

a {
	position: relative;
}

a:before {
	content: '⇒';
	color: #999;
	text-decoration: none;
	font-weight: bold;
	position: absolute;
	left: -1.25rem;
}

pre {
	background-color: #eee;
	margin: 0 -1rem;
	padding: 1rem;
	overflow-x: auto;
}

details:not([open]) summary,
details:not([open]) summary a {
	color: gray;
}

details summary a:before {
	display: none;
}

dl dt {
	font-weight: bold;
}

dl dt:not(:first-child) {
	margin-top: 0.5rem;
}

@media(prefers-color-scheme:dark) {
	html {
		background-color: #111;
		color: #eee;
	}

	blockquote {
		background-color: #000;
	}

	pre {
		background-color: #222;
	}

	a {
		color: #0087BD;
	}

	a:visited {
		color: #333399;
	}
}

label {
	display: block;
	font-weight: bold;
	margin-bottom: 0.5rem;
}

input {
	display: block;
	border: 1px solid #888;
	padding: .375rem;
	line-height: 1.25rem;
	transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
	width: 100%;
}

input:focus {
	outline: 0;
	border-color: #80bdff;
	box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
}
</style>
<title>gemini example file</title>
<body>
<h1>gemini example file</h1>
<p></p>
<p>Should contain all the gemtext specifications.</p>
<p></p>
<h2>A first heading 2</h2>
<p></p>
<p>Lets start with two separated lists</p>
<p></p>
<ul>
<li>First element</li>
<li>The second is good</li>
<li>The third is indented !</li>
<li>   The fourth is delayed</li>
</ul>
<p></p>
<ul>
<li>Hey, I'm the first element of a second list</li>
<li>The second is the best in all cases</li>
</ul>
<p></p>
<pre>
Some preformatted simple text

&lt;p&gt;A html tag in preformatted&lt;/p&gt;
Some preformatted chars and emojis : &amp;;\"🌳
</pre>
<p></p>
<p>Quotes for cultured people 😅 :</p>
<p></p>
TODO QUOTE: How do you want to do this ?<br />
TODO QUOTE: You can certainly try<br />
TODO QUOTE: At dawn, we plan !<br />
<p></p>
<h3>A Heading 3</h3>
<p></p>
<p>Following, a link without description, and an image without description</p>
<p></p>
<a href="https://wikipedia.org/wiki/Gemini_(protocol)">https://wikipedia.org/wiki/Gemini_(protocol)</a><br />
<a href="https://upload.wikimedia.org/wikipedia/commons/0/0b/D%26D_Game_1.jpg"><img loading="lazy" height="200" sizes="auto, (max-width: 30em) 100vw, (max-width: 50em) 50vw, calc(33vw - 100px)" src="https://upload.wikimedia.org/wikipedia/commons/0/0b/D%26D_Game_1.jpg" alt="https://upload.wikimedia.org/wikipedia/commons/0/0b/D%26D_Game_1.jpg" /></a><br />
<a href="https://geminiprotocol.net/docs/gemtext-specification.gmi">A link to the gemtext specification</a><br />
<a href="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Screenshot_of_Amfora.png/960px-Screenshot_of_Amfora.png"><img loading="lazy" height="200" sizes="auto, (max-width: 30em) 100vw, (max-width: 50em) 50vw, calc(33vw - 100px)" src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a8/Screenshot_of_Amfora.png/960px-Screenshot_of_Amfora.png" alt="A link to an image" /></a><br />
<a href="gemini://geminiprotocol.net/docs/gemtext-specification.gmi">A gemini link (you need a gemini browser)</a><br />
<a href="gemini://geminiprotocol.net/docs/gemtext-specification.gmi">A gemini link with spaces</a><br />
<a href="images/avatar.avif"><img loading="lazy" height="200" sizes="auto, (max-width: 30em) 100vw, (max-width: 50em) 50vw, calc(33vw - 100px)" src="images/avatar.avif" alt="A relative link to an AVIF image" /></a><br />
<p></p>
<h2>Another heading 2</h2>
<h2>The last  heading 2</h2>
<p>some infos</p></body>
</html>
